force-app/main/default/objects/Location_Site__c/Location_Site__c.object-meta.xml
<CustomObject>
    <description>Custom Object Location Site to create project for panther school.</description>
    <label>Location Site</label>
    <nameField>
        <label>Location Site Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Location Site</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>