force-app/main/default/objects/Location_Site__c/fields/Average_Home_Price__c.field-meta.xml
<CustomField>
    <fullName>Average_Home_Price__c</fullName>
    <label>Average_Home_Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>