force-app/main/default/objects/Location_Site__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <description>City Name</description>
    <label>City</label>
    <length>50</length>
    <type>Text</type>
</CustomField>