force-app/main/default/objects/Location_Site__c/fields/Hospitals__c.field-meta.xml
<CustomField>
    <fullName>Hospitals__c</fullName>
    <description>Nearby hospitals</description>
    <inlineHelpText>List nearby hospitals and medical facilities</inlineHelpText>
    <label>Hospitals</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>