force-app/main/default/objects/Location_Site__c/fields/Location_FullAddress__c.field-meta.xml
<CustomField>
    <fullName>Location_FullAddress__c</fullName>
    <description>Combines all address components into a single formatted address</description>
    <formula>Name &amp; &quot;, &quot; &amp; 
City__c &amp; &quot;, &quot; &amp; 
TEXT(State__c) &amp; &quot; &quot; &amp; 
Zip_Code__c &amp; 
IF(NOT(ISBLANK(County__c)), &quot; (&quot; &amp; County__c &amp; &quot; County)&quot;, &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Location_FullAddress</label>
    <type>Text</type>
</CustomField>