force-app/main/default/objects/Location_Site__c/fields/Public_Transportation__c.field-meta.xml
<CustomField>
    <fullName>Public_Transportation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Public transportation available</description>
    <inlineHelpText>Check if public transportation is accessible</inlineHelpText>
    <label>Public_Transportation</label>
    <type>Checkbox</type>
</CustomField>