force-app/main/default/objects/Location_Site__c/fields/Safety_Score__c.field-meta.xml
<CustomField>
    <fullName>Safety_Score__c</fullName>
    <description>Converts crime rating to numeric score for calculations</description>
    <formula>CASE(TEXT(Crime_Rating__c),
  &quot;Excellent&quot;, 4,
  &quot;Good&quot;, 3,
  &quot;Fair&quot;, 2,
  &quot;Poor&quot;, 1,
  0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Safety_Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>