force-app/main/default/objects/Location_Site__c/fields/School_District__c.field-meta.xml
<CustomField>
    <fullName>School_District__c</fullName>
    <label>School_District</label>
    <length>50</length>
    <type>Text</type>
</CustomField>