force-app/main/default/objects/Location_Site__c/fields/Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Zip_Code__c</fullName>
    <label>Zip_Code</label>
    <length>6</length>
    <type>Text</type>
</CustomField>