force-app/main/default/objects/Location_Site__c/validationRules/Required_Location_Fields.validationRule-meta.xml
<ValidationRule>
    <fullName>Required_Location_Fields</fullName>
    <active>true</active>
    <description>Ensures all critical location fields are populated</description>
    <errorConditionFormula>OR(
  ISBLANK( City__c ),
  ISPICKVAL(State__c,&quot; &quot; ),
  ISBLANK( County__c )
)</errorConditionFormula>
    <errorMessage>Name, City, State, and County are required fields</errorMessage>
</ValidationRule>