force-app/main/default/objects/Location_Site__c/validationRules/Valid_ZIP_Code_Format.validationRule-meta.xml
<ValidationRule>
    <fullName>Valid_ZIP_Code_Format</fullName>
    <active>true</active>
    <description>Ensures ZIP code follows proper format (5 digits or 5+4 format)</description>
    <errorConditionFormula>AND(
  NOT(ISBLANK( Zip_Code__c )),
  NOT(
    OR(
      REGEX( Zip_Code__c , &quot;^[0-9]{5}$&quot;),
      REGEX( Zip_Code__c , &quot;^[0-9]{5}-[0-9]{4}$&quot;)
    )
  )
)</errorConditionFormula>
    <errorDisplayField>Zip_Code__c</errorDisplayField>
    <errorMessage>ZIP Code must be in format 12345 or 12345-6789</errorMessage>
</ValidationRule>